--- a/index.html
+++ b/index.html
@@ -275,6 +275,11 @@ p.centered {
 	text-align: center;
 	font-weight: 700;
 }
+amp-iframe{
+    margin:0 auto;
+    width:92%;
+    max-width:800px;
+}
 </style>
 </head>
 
