--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ amp-iframe{
     <header class="sectionTitle"><h1>RSVP</h1></header>
     <article>
 		<p class="centered">Come celebrate with us!<br><br>Check out the Ranch and Lodging sections before submitting the RSVP form below.</p>		
-		<a href="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?usp=sf_link"><button class="link" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?usp=sf_link';" target="_blank"><div class="linkText">CLICK TO RSVP</div></button></a>
+		<a href="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?usp=sf_link" target="_blank"><button class="link"><div class="linkText">CLICK TO RSVP</div></button></a>
     </article>
 </section>
 
