--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ amp-iframe{
     <header class="sectionTitle"><h1>RSVP</h1></header>
     <article>
 		<p class="centered">Come celebrate with us!<br><br>Check out the Ranch and Lodging sections before submitting the RSVP form below.</p>		
-        <amp-iframe width="800" height="800" scrolling="no" sandbox="allow-scripts allow-same-origin" layout="responsive" frameborder="0" src="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?embedded=true">
+        <amp-iframe width="800" height="1400" sandbox="allow-scripts allow-same-origin" layout="responsive" frameborder="0" src="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?embedded=true">
         </amp-iframe>
     </article>
 </section>
@@ -347,7 +347,7 @@ amp-iframe{
     <header class="sectionTitle"><h1>Lodging</h1></header>
     <article>
 		<p>The Ranch sleeps about 100 people, and we would love to have every bed filled! Our intention is to have a fun weekend of connection and easy gathering. The accommodations range from bunk houses to canvas tents with beds & linens, all while maintaining a rustic environment with shared bathrooms and nature all around.<br><br>On-ranch offerings:</p>
-        <amp-iframe width="400" height="325" scrolling="no" sandbox="allow-scripts allow-same-origin" layout="responsive" frameborder="0" src="https://docs.google.com/spreadsheets/d/17c6lBYkNtdiD44w66Kn_5JvMgTXZALwh1MnBOybNuBw/htmlembed/sheet?gid=1014832229">
+        <amp-iframe width="400" height="327" scrolling="no" sandbox="allow-scripts allow-same-origin" layout="responsive" frameborder="0" src="https://docs.google.com/spreadsheets/d/17c6lBYkNtdiD44w66Kn_5JvMgTXZALwh1MnBOybNuBw/htmlembed/sheet?gid=1014832229">
         </amp-iframe>
     </article>
 </section>
