--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@ amp-iframe{
 
 <section id="rsvp" on="expand:rsvp.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>RSVP</h1></header>
-    <article>		
-        <amp-iframe width="800" height="1000" sandbox="allow-scripts allow-same-origin" layout="responsive" frameborder="0" src="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?embedded=true">
+    <article>	<p>Something</p>	
+        <amp-iframe width="800" height="800" sandbox="allow-scripts allow-same-origin" layout="responsive" frameborder="0" src="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?embedded=true">
         </amp-iframe>
     </article>
 </section>
