--- a/index.html
+++ b/index.html
@@ -313,9 +313,9 @@ amp-iframe{
 
 <section id="rsvp" on="expand:rsvp.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>RSVP</h1></header>
-    <article>	<p>Something</p>	
-        <amp-iframe width="800" height="1400" sandbox="allow-scripts allow-same-origin" layout="responsive" frameborder="0" src="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?embedded=true">
-        </amp-iframe>
+    <article>	
+        <p class="centered">Come celebrate with us!<br><br>Check out the Ranch and Lodging info before submitting the RSVP form below.</p>	
+       <a href="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?usp=sf_link" target="_blank"><button class="link"><div class="linkText">CLICK TO RSVP</div></button></a>
     </article>
 </section>
 
