--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ amp-iframe{
   <a class="container" href="#rsvp" on="tap:accordion.expand(section='rsvp'),rsvp.scrollTo(duration=700)"><h1>RSVP</h1></a>
   <a class="container" href="#ranch" on="tap:accordion.expand(section='ranch'),ranch.scrollTo(duration=700)"><h1>The Ranch</h1></a>
   <a class="container" href="#lodging" on="tap:accordion.expand(section='lodging'),lodging.scrollTo(duration=700)"><h1>Lodging</h1></a>
-  <a class="container" href="#travel" on="tap:accordion.expand(section='travel'),travel.scrollTo(duration=700)"><h1>Travel</h1></a>
+  <a class="container" href="#travel" on="tap:accordion.expand(section='travel'),travel.scrollTo(duration=700)"><h1>Getting Around</h1></a>
   <a class="container" href="#schedule" on="tap:accordion.expand(section='schedule'),schedule.scrollTo(duration=700)"><h1>Schedule</h1></a>
   <a class="container" href="#registry" on="tap:accordion.expand(section='registry'),registry.scrollTo(duration=700)"><h1>Registry</h1></a>
   <a class="container" href="#faq" on="tap:accordion.expand(section='faq'),faq.scrollTo(duration=700)"><h1>FAQ</h1></a>
