--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ amp-iframe{
 <section id="rsvp" on="expand:rsvp.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>RSVP</h1></header>
     <article><p></p>	
-        <amp-iframe width="800" height="2650" sandbox="allow-scripts allow-same-origin allow-popups-to-escape-sandbox allow-forms allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" src="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?embedded=true">
+        <amp-iframe width="800" height="2650" sandbox="allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-forms allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" src="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?embedded=true">
         </amp-iframe>
     </article>
 </section>
@@ -354,7 +354,7 @@ amp-iframe{
 <section id="travel" on="expand:travel.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>Getting Around</h1></header>
     <article><p></p>
-        <amp-iframe width="800" height="500" scrolling="no" sandbox="allow-scripts allow-same-origin allow-popups-to-escape-sandbox allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" src="https://www.google.com/maps/d/embed?mid=10eAS31R--V5vUk8w6CcqVqAqBmJ_Hbjm">
+        <amp-iframe width="800" height="500" scrolling="no" sandbox="allow-modals allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" src="https://www.google.com/maps/d/embed?mid=10eAS31R--V5vUk8w6CcqVqAqBmJ_Hbjm">
         </amp-iframe>
     </article>
 </section>
