--- a/index.html
+++ b/index.html
@@ -313,7 +313,8 @@ amp-iframe{
 
 <section id="rsvp" on="expand:rsvp.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>RSVP</h1></header>
-    <article><p></p>	
+    <article><p>BEFORE YOU START: check out the Ranch and Lodging info. 
+Do not click away from this form or you will lose your progress.</p>	
         <amp-iframe width="800" height="1000" sandbox="allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-forms allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" style="border:0" src="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?embedded=true">
         </amp-iframe>
     </article>
@@ -364,6 +365,27 @@ amp-iframe{
 <section id="schedule" on="expand:schedule.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>Schedule</h1></header>
     <article>
+        <p>FRIDAY<br><br>
+        3pm Field Games / Hike / Pool Time<br>
+        5pm Dinner<br>
+        6pm Campfire<br>
+        10pm Night Frisbee<br><br>
+        SATURDAY<br><br>
+        9am Breakfast<br>
+        10am Susan's Art Hour<br>
+        11am Group Activity<br>
+        3pm Snack<br>
+        5pm Wedding Ceremony<br>
+        6pm Dinner<br>
+        8pm Maureen's Line Dancing<br>
+        11pm Campfire and s'mores<br><br>
+        SUNDAY<br><br>
+        9am Breakfast<br>
+        10am Tidy-up<br>
+        12pm Roslyn Farmer's Market<br>
+        2pm Meet at M+A's House<br>
+        3pm Hike / Fish<br>
+        </p>
     </article>
 </section>
 
