--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ Do not click away from this form or you will lose your progress.</p>
 <section id="schedule" on="expand:schedule.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>Schedule</h1></header>
     <article>
-        <p>FRIDAY<br><br>
+        <p class="centered">FRIDAY<br><br>
         3pm Field Games / Hike / Pool Time<br>
         5pm Dinner<br>
         6pm Campfire<br>
