--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ Do not click away from this form or you will lose your progress.</p>
         3pm Field Games / Hike / Pool Time<br>
         5pm Dinner<br>
         6pm Campfire<br>
-        10pm Night Frisbee<br><br>
+        10pm Night Frisbee<br><br><br>
         SATURDAY<br><br>
         9am Breakfast<br>
         10am Susan's Art Hour<br>
@@ -378,7 +378,7 @@ Do not click away from this form or you will lose your progress.</p>
         5pm Wedding Ceremony<br>
         6pm Dinner<br>
         8pm Maureen's Line Dancing<br>
-        11pm Campfire and s'mores<br><br>
+        11pm Campfire and s'mores<br><br><br>
         SUNDAY<br><br>
         9am Breakfast<br>
         10am Tidy-up<br>
