--- a/index.html
+++ b/index.html
@@ -366,25 +366,25 @@ Do not click away from this form or you will lose your progress.</p>
     <header class="sectionTitle"><h1>Schedule</h1></header>
     <article>
         <p class="centered">FRIDAY<br><br>
-        3pm...Field Games / Hike / Pool Time<br>
-        5pm...........................Dinner<br>
-        6pm.........................Campfire<br>
-        10pm...................Night Frisbee<br><br><br>
-        SATURDAY<br><br>
-        9am........................Breakfast<br>
-        10am................Susan's Art Hour<br>
-        11am..................Group Activity<br>
-        3pm............................Snack<br>
-        5pm.................Wedding Ceremony<br>
-        6pm...........................Dinner<br>
-        8pm...........Maureen's Line Dancing<br>
-        11pm............Campfire and s'mores<br><br><br>
-        SUNDAY<br><br>
-        9am........................Breakfast<br>
-        10am.........................Tidy-up<br>
-        12pm..........Roslyn Farmer's Market<br>
-        2pm..............Meet at M+A's House<br>
-        3pm......................Hike / Fish<br>
+        3pm.....Field Games / Hike / Pool Time<br>
+        5pm……………………………...........................Dinner<br>
+        6pm.......................................................Campfire<br>
+        10pm...........................................Night Frisbee<br><br>
+        SATURDAY<br>
+        9am.......................................................Breakfast<br>
+        10am....................................Susan's Art Hour<br>
+        11am...........................................Group Activity<br>
+        3pm..............................................................Snack<br>
+        5pm.............................Wedding Ceremony<br>
+        6pm............................................................Dinner<br>
+        8pm...................Maureen's Line Dancing<br>
+        11pm........................Campfire and S'mores<br><br>
+        SUNDAY<br>
+        9am......................................................Breakfast<br>
+        10am.........................................................Tidy-up<br>
+        12pm...................Roslyn Farmer's Market<br>
+        2pm...........................Meet at M+A's House<br>
+        3pm....................................................Hike / Fish<br>
         </p>
     </article>
 </section>
