--- a/index.html
+++ b/index.html
@@ -374,9 +374,9 @@ Do not click away from this form or you will lose your progress.</p>
         9am.......................................................Breakfast<br>
         10am....................................Susan's Art Hour<br>
         11am...........................................Group Activity<br>
-        3pm..............................................................Snack<br>
-        5pm............................Wedding Ceremony<br>
-        6pm............................................................Dinner<br>
+        3pm...............................................................Snack<br>
+        5pm.............................Wedding Ceremony<br>
+        6pm.............................................................Dinner<br>
         8pm..................Maureen's Line Dancing<br>
         11pm.......................Campfire and S'mores<br><br>
         SUNDAY<br>
