--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ button:focus {
   }
   p{
     font-size: 16px;
-	margin:12vh auto;
+	margin:6vh auto 12vh auto;
     width:92%;
     max-width:800px;
     font-weight:300;
