--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ button:focus {
   p{
     font-size: 16px;
 	margin:8vh auto;
-    width:92%;
+    width:92vw;
     max-width:800px;
     font-weight:300;
     color:#16161d;
