--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ button:focus {
     padding:0;
 	  margin:0;
 	  background: #f2f2f5;
+      width:100%;
   }
   .title{
     position:absolute;
@@ -150,11 +151,13 @@ p.centered {
     border-left: calc(50vw - 14vh) solid transparent;
     border-right: calc(50vw - 14vh) solid transparent;
     outline:none;
+      font-weight: 700;
   }
   section:hover > .sectionTitle{
     background:#f2f2f5;
     color:#16161d;
     outline:none;
+      font-weight: 700;
   }
   .sectionTitle:focus{
     outline:none;
