--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ button:focus {
   }
   article{
     padding:0;
-	  margin:0;
+	  margin-right:14px;
 	  background: #f2f2f5;
       width:100%;
   }
