--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ button:focus {
     padding:0;
   }
   article{
-    padding:0;
+    padding-right:14px;
 	  margin-right:14px;
 	  background: #f2f2f5;
       width:100%;
