--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@ button:focus {
   }
   article{
     padding-right:14px;
-	  margin-right:14px;
 	  background: #f2f2f5;
-      width:100%;
+      width:100vw;
   }
   .title{
     position:absolute;
