--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@ button:focus {
   ::-moz-selection {
     background-color: #eee;
   }
+  .spacer{
+    height:54.5vh;
+  }
   header {
     position: fixed;
     top:0;
@@ -57,9 +60,9 @@ button:focus {
     padding:0;
   }
   article{
-    padding-right:14px;
+      margin-left:-14px;
 	  background: #f2f2f5;
-      width:100vw;
+      width:100%;
   }
   .title{
     position:absolute;
