--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ Do not click away from this form or you will lose your progress.</p>
         <p class="centered">FRIDAY<br><br>
         3pm.....Field Games / Hike / Pool Time<br>
         5pm……………………………............................Dinner<br>
-        6pm.......................................................Campfire<br>
+        6pm........................Campfire and S'mores<br>
         10pm...........................................Night Frisbee<br><br>
         SATURDAY<br>
         9am.......................................................Breakfast<br>
@@ -374,9 +374,8 @@ Do not click away from this form or you will lose your progress.</p>
         11am...........................................Group Activity<br>
         3pm...............................................................Snack<br>
         5pm.............................Wedding Ceremony<br>
-        6pm.............................................................Dinner<br>
-        8pm..................Maureen's Line Dancing<br>
-        11pm.......................Campfire and S'mores<br><br>
+        6pm..........................................................Reception<br>
+        11pm.....................................................Campfire<br><br>
         SUNDAY<br>
         9am......................................................Breakfast<br>
         10am.........................................................Tidy-up<br>
