--- a/index.html
+++ b/index.html
@@ -373,10 +373,10 @@ Do not click away from this form or you will lose your progress.</p>
         11am...........................................Group Activity<br>
         3pm...............................................................Snack<br>
         5pm.............................Wedding Ceremony<br>
-        6pm..........................................................Reception<br>
+        6pm........................................................Reception<br>
         11pm.....................................................Campfire<br><br>
         SUNDAY<br>
-        9am......................................................Breakfast<br>
+        9am........................................................Brunch<br>
         10am.........................................................Tidy-up<br>
         12pm..................Roslyn Farmer's Market<br>
         2pm..........................Meet at M+A's House<br>
