--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ Do not click away from this form or you will lose your progress.</p>
         6pm........................Campfire and S'mores<br>
         10pm...........................................Night Frisbee<br><br>
         SATURDAY<br>
-        9am.......................................................Breakfast<br>
+        9am.................................Breakfast for Campers<br>
         11am...........................................Group Activity<br>
         3pm...............................................................Snack<br>
         5pm.............................Wedding Ceremony<br>
