--- a/index.html
+++ b/index.html
@@ -369,16 +369,16 @@ Do not click away from this form or you will lose your progress.</p>
         6pm........................Campfire and S'mores<br>
         10pm...........................................Night Frisbee<br><br>
         SATURDAY<br>
-        9am..............................Breakfast for Campers<br>
+        9am......................Breakfast for Campers<br>
         11am...........................................Group Activity<br>
         3pm...............................................................Snack<br>
         5pm.............................Wedding Ceremony<br>
-        6pm......................................................Reception<br>
+        6pm....................................................Reception<br>
         11pm.....................................................Campfire<br><br>
         SUNDAY<br>
-        9am..........................................................Brunch<br>
+        9am...........................................................Brunch<br>
         10am.........................................................Tidy-up<br>
-        12pm.......................................Depart Ranch<br>
+        12pm.........................................Depart Ranch<br>
         12pm..................Roslyn Farmer's Market<br>
         2pm..........................Meet at M+A's House<br>
         3pm....................................................Hike / Fish<br>
