--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ Do not click away from this form or you will lose your progress.</p>
 
    <a href="https://markandannie.camp/img/map.jpg" target="_blank"><figure class="small">
 	<amp-img alt="Ranch Map"
-	  src="img/map.jpg"
+	  src="img/map2.jpg"
 	  width="3011"
 	  height="3447"
 	  layout="responsive">
