--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@ button:focus {
     padding:0;
   }
   article{
-      margin-left:-140px;
 	  background: #f2f2f5;
       width:100%;
   }
@@ -109,13 +108,14 @@ button:focus {
     max-width:800px;
     font-weight:300;
     color:#16161d;
-	  line-height:26px;
+      line-height:26px;
   }
   p.uppercase {
       text-transform: uppercase;
   }
 p.centered {
      text-align: center;
+          padding-right:200px;
   }
   amp-img.cover img {
     object-fit: cover;
