--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ button:focus {
     padding:0;
   }
   article{
-	  background: #f2f2f5;
+	  background: #fff;
       width:100%;
   }
   .title{
@@ -115,7 +115,7 @@ button:focus {
   }
 p.centered {
      text-align: center;
-          padding-right:200px;
+          padding-right:14px;
   }
   amp-img.cover img {
     object-fit: cover;
@@ -142,7 +142,7 @@ p.centered {
   }
   section[expanded] > .sectionTitle {
     border:none;
-    background:#f2f2f5;
+    background:#fff;
     color:#16161d;
     border-bottom: none;
     border-left: calc(50vw - 14vh) solid transparent;
@@ -150,7 +150,7 @@ p.centered {
     outline:none;
   }
   section:hover > .sectionTitle{
-    background:#f2f2f5;
+    background:#fff;
     color:#16161d;
     outline:none;
   }
@@ -192,7 +192,7 @@ p.centered {
 	  cursor:pointer;
   }
   button svg{
-      fill:#fff;
+      fill:#ddd;
       transition:all .3s;      
   }
   button:hover svg{
@@ -286,7 +286,7 @@ amp-iframe{
 
 <section id="rsvp" on="expand:rsvp.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>RSVP</h1></header>
-    <article><p>BEFORE YOU START: check out the Ranch and Lodging info. 
+    <article><p>BEFORE YOU START: check out the Ranch and Lodging info.<br> 
 Do not click away from this form or you will lose your progress.</p>	
         <amp-iframe width="800" height="1000" sandbox="allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-forms allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" style="border:0" src="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?embedded=true">
         </amp-iframe>
