--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ amp-iframe{
 
 <section id="rsvp" on="expand:rsvp.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>RSVP</h1></header>
-    <article><p>BEFORE YOU START: check out the Ranch and Lodging info.<br> 
+    <article><p class="centered">BEFORE YOU START: check out the Ranch and Lodging info.<br> 
 Do not click away from this form or you will lose your progress.</p>	
         <amp-iframe width="800" height="1000" sandbox="allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-forms allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" style="border:0" src="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?embedded=true">
         </amp-iframe>
