--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ p.centered {
 	  cursor:pointer;
   }
   button svg{
-      fill:#ddd;
+      fill:#eee;
       transition:all .3s;      
   }
   button:hover svg{
