--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ Do not click away from this form or you will lose your progress.</p>
         9am........................Breakfast for Campers<br>
         11am............................................Group Activity<br>
         3pm................................................................Snack<br>
-        5pm.............................Wedding Ceremony<br>
+        5pm.............................<b>Wedding Ceremony</b><br>
         6pm.....................................................Reception<br>
         11pm......................................................Campfire<br><br>
         SUNDAY<br>
