--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@ button:focus {
     outline: none;
     }
   a:hover {
-    background: #eee;
+    background: #f2f2f2;
   }
   ::selection {
-    background-color: #eee;
+    background-color: #f2f2f2;
   }
   ::-moz-selection {
-    background-color: #eee;
+    background-color: #f2f2f2;
   }
   .spacer{
     height:54.5vh;
@@ -192,7 +192,7 @@ p.centered {
 	  cursor:pointer;
   }
   button svg{
-      fill:#eee;
+      fill:#f2f2f2;
       transition:all .3s;      
   }
   button:hover svg{
@@ -222,7 +222,7 @@ p.centered {
     padding:3vh;
   }
   .container:hover {
-    background-color: #eee;
+    background-color: #f2f2f2;
   }
   .contact {
     position: absolute;
