--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     text-decoration: inherit;
     outline:none;
     font-weight:inherit;
-    border-bottom: .5px dashed #999;
+    border-bottom: .5px dashed #eee;
   }
 input:focus,
 select:focus,
