--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     text-decoration: inherit;
     outline:none;
     font-weight:inherit;
-    border-bottom: .5px dashed #eee;
+    border-bottom: .5px dashed #ddd;
   }
 input:focus,
 select:focus,
@@ -38,13 +38,13 @@ button:focus {
     outline: none;
     }
   a:hover {
-    background: #f2f2f2;
+    border-bottom: .5px solid #000;
   }
   ::selection {
-    background-color: #f2f2f2;
+   border-bottom: .5px solid #000;
   }
   ::-moz-selection {
-    background-color: #f2f2f2;
+    border-bottom: .5px solid #000;
   }
   .spacer{
     height:54.5vh;
@@ -348,7 +348,7 @@ Do not click away from this form or you will lose your progress.</p>
         9am........................Breakfast for Campers<br>
         11am............................................Group Activity<br>
         3pm................................................................Snack<br>
-        5pm.............................<b>Wedding Ceremony</b><br>
+        5pm...........................<b>Wedding Ceremony</b><br>
         6pm.....................................................Reception<br>
         11pm......................................................Campfire<br><br>
         SUNDAY<br>
