--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     text-decoration: inherit;
     outline:none;
     font-weight:inherit;
-    border-bottom: .5px dashed #aaa;
+    border-bottom: 1px dashed #aaa;
   }
 input:focus,
 select:focus,
@@ -38,13 +38,13 @@ button:focus {
     outline: none;
     }
   a:hover {
-    border-bottom: .5px solid #000;
+    border-bottom: 1px solid #000;
   }
   ::selection {
-   border-bottom: .5px solid #000;
+   border-bottom: 1px solid #000;
   }
   ::-moz-selection {
-    border-bottom: .5px solid #000;
+    border-bottom: 1px solid #000;
   }
   .spacer{
     height:54.5vh;
