--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ p.centered {
   }
   .container:hover {
     background-color: #f2f2f2;
-     border-bottom: none;
+    border-bottom: 1px dashed #aaa;
   }
   .contact {
     position: absolute;
@@ -311,7 +311,7 @@ Do not click away from this form or you will lose your progress.</p>
 	<figcaption>Ranch Map</figcaption>
   </figure></a>
 		
-	<p class="centered"><a href="https://goo.gl/maps/7uuvrK9YYHCSCu8e7" target="_blank"><b>3190 Red Bridge Rd</b>, Cle Elum WA 98922</a><br><br>
+	<p class="centered"><a href="https://goo.gl/maps/7uuvrK9YYHCSCu8e7" target="_blank">3190 Red Bridge Rd, Cle Elum WA 98922</a><br><br>
         <a href="https://forecast.weather.gov/MapClick.php?lat=47.194&lon=-120.9331&unit=0&lg=english&FcstType=graphical" target="_blank">Local Weather</a><br><br>
         See the lodging section for more info about where to stay.</p>
     </article>
