--- a/index.html
+++ b/index.html
@@ -149,10 +149,16 @@ p.centered {
     border-right: calc(50vw - 14vh) solid transparent;
     outline:none;
   }
+section[expanded] > .sectionTitle > h1{
+    font-weight:700;
+  }
   section:hover > .sectionTitle{
     background:#fff;
     color:#16161d;
     outline:none;
+  }
+    section:hover > .sectionTitle > h1{
+    font-weight:700;
   }
   .sectionTitle:focus{
     outline:none;
