--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ amp-iframe{
   <a class="container" href="#schedule" on="tap:accordion.expand(section='schedule'),schedule.scrollTo(duration=700)"><h1>Schedule</h1></a>
   <a class="container" href="#registry" on="tap:accordion.expand(section='registry'),registry.scrollTo(duration=700)"><h1>Registry</h1></a>
   <a class="container" href="#faq" on="tap:accordion.expand(section='faq'),faq.scrollTo(duration=700)"><h1>FAQ</h1></a>
-  <div class="contact"><h1>hi@markandannie.camp</h1></div>
+  <div class="contact"><a href="mailto:hi@markandannie.camp?Subject=Howdy" target="_blank"><h1>hi@markandannie.camp</h1></a></div>
 </amp-sidebar>
 
 <header>
