--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ button:focus {
     top:0;
     z-index:20;
     width:13vh;
+ margin-bottom:8vh;
   }
   section{
     margin:0;
@@ -103,7 +104,7 @@ button:focus {
   }
   p{
     font-size: 16px;
-	margin:8vh auto;
+	margin:0 auto 8vh auto;
     width:92vw;
     max-width:800px;
     font-weight:300;
@@ -164,7 +165,7 @@ section[expanded] > .sectionTitle > h1{
     outline:none;
   }
   figure {
-    margin:0 auto;
+    margin:0 auto 8vh auto;
     width:92%;
     max-width:800px;
       margin-bottom:-24px;
@@ -255,7 +256,7 @@ section[expanded] > .sectionTitle > h1{
     user-select: none;
   }
 amp-iframe{
-    margin:0 auto;
+    margin:0 auto 8vh auto;
     width:92%;
     max-width:800px;
     overflow: hidden;
