--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ Do not click away from this form or you will lose your progress.</p>
 
 <section id="travel" on="expand:travel.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>Getting Around</h1></header>
-    <article><p></p>
+    <article>
         <amp-iframe width="800" height="800" scrolling="no" sandbox="allow-modals allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" src="https://www.google.com/maps/d/embed?mid=10eAS31R--V5vUk8w6CcqVqAqBmJ_Hbjm">
         </amp-iframe>
         <p></p>
@@ -372,7 +372,7 @@ Do not click away from this form or you will lose your progress.</p>
 
 <section id="registry" on="expand:registry.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>Registry</h1></header>
-    <article><p></p>
+    <article>
         <amp-iframe width="800" height="800" sandbox="allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-forms allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" style="border:0" src="https://docs.google.com/forms/d/e/1FAIpQLSd8dDQ6FIOuY0BJ4JN-QOKFfXMDCQSaSE2LDn374nYgZT7iJw/viewform?embedded=true">
         </amp-iframe>
     </article>
