--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@ button:focus {
     top:0;
     z-index:20;
     width:13vh;
- margin-bottom:14vh;
   }
   section{
     margin:0;
@@ -63,6 +62,7 @@ button:focus {
   article{
 	  background: #fff;
       width:100%;
+       margin-top:14vh;
   }
   .title{
     position:absolute;
