--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ button:focus {
   article{
 	  background: #fff;
       width:100%;
-       margin-top:14vh;
+       padding-top:14vh;
   }
   .title{
     position:absolute;
