--- a/index.html
+++ b/index.html
@@ -214,16 +214,18 @@ section[expanded] > .sectionTitle > h1{
     user-select: none;
     color:#16161d;
     padding:3vh;
+      border:none;
   }
   .container:hover {
     background-color: #f2f2f2;
-    border-bottom: 1px dashed #aaa;
+    border:none;
   }
   .contact {
     position: absolute;
     bottom:0;
     width:100%;
     padding:4vh;
+      border:none;
   }
   .background{
     position:fixed;
