--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     font-weight:inherit;
     border-bottom: 1px dashed #aaa;
   }
+    b{
+        font-weight:500;
+    }
 input:focus,
 select:focus,
 textarea:focus,
