--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     font-style:inherit;
     text-decoration: inherit;
     outline:none;
-    font-weight:inherit;
-    border-bottom: 1px dashed #aaa;
+    font-weight:500;
+    border:none;
   }
     b{
         font-weight:500;
