--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@ button:focus {
     outline: none;
     }
   a:hover {
-    border-bottom: 1px solid #000;
+    border-bottom: 1px dashed #000;
   }
   ::selection {
-   border-bottom: 1px solid #000;
+   border-bottom: 1px dashed #000;
   }
   ::-moz-selection {
-    border-bottom: 1px solid #000;
+    border-bottom: 1px dashed #000;
   }
   .spacer{
     height:54.5vh;
