--- a/index.html
+++ b/index.html
@@ -220,8 +220,10 @@ section[expanded] > .sectionTitle > h1{
       border:none;
   }
   .container:hover {
-    font-weight:500;
     border:none;
+  }
+.container:hover > h1 {
+    font-weight:500;
   }
   .contact {
     position: absolute;
