--- a/index.html
+++ b/index.html
@@ -374,6 +374,13 @@ Do not click away from this form or you will lose your progress.</p>
 <section id="faq" on="expand:faq.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>FAQ</h1></header>
     <article>
+        <p><em>Where are Mark and Annie staying?</em><br>
+            Flying Horseshoe Ranch!<br><br>
+            <em>Do you have a registry?</em><br>
+            Yes, sort of. The greatest gift you can give us is your presence and your help. We’d love to keep the “camp” vibe going with lots of participation, and as you know, throwing this big of a party is a big job, so we’d really appreciate any help you can give! Please see our “Participation Registry” tab.<br><br>
+            <em>Can I bring my kids?</em><br>
+            Yes! Please plan accordingly for them sleeping at the ranch (travel crib or their own bunk bed, etc.). They would be welcome at every activity and would probably have a great time!<br><br>
+        </p>
     </article>
 </section>
 
