--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ Do not click away from this form or you will lose your progress.</p>
 		
 	<p class="centered"><a href="https://goo.gl/maps/7uuvrK9YYHCSCu8e7" target="_blank">3190 Red Bridge Rd, Cle Elum WA 98922</a><br><br>
         <a href="https://forecast.weather.gov/MapClick.php?lat=47.194&lon=-120.9331&unit=0&lg=english&FcstType=graphical" target="_blank">Local Weather</a><br><br>
-        See the lodging section for more info about where to stay.</p>
+        See the Lodging section for more info about where to stay.</p>
     </article>
 </section>
 
@@ -381,7 +381,7 @@ Do not click away from this form or you will lose your progress.</p>
             <em>Can I bring my dog?</em><br>
             Sorry, but the ranch host has requested no dogs. Check out <a href="https://goo.gl/maps/J8r6MVTXRfjnWFu39" target="_blank">Waggin Tails Ranch</a> or <a href="https://goo.gl/maps/NERGmT8yaWMgUn9v6" target="_blank">Bord & Pillar Pet Resort</a> for boarding.<br><br>
             <em>Do you have a registry?</em><br>
-            Yes, sort of. The greatest gift you can give us is your presence and your help. We’d love to keep the camp vibe going with lots of participation, and would appreciate any help you can offer! Check out the <a href="#registry">Registry</a> section for more info.<br><br>
+            Yes, sort of. The greatest gift you can give us is your presence and your help. We’d love to keep the camp vibe going with lots of participation, and would appreciate any help you can offer! Check out the <a href="#registry" on="tap:accordion.expand(section='registry'),registry.scrollTo(duration=700)">Registry</a> section for more info.<br><br>
         </p>
     </article>
 </section>
