--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ amp-iframe{
 
 <section id="rsvp" on="expand:rsvp.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>RSVP</h1></header>
-    <article><p class="centered">BEFORE YOU START: check out the Ranch and Lodging info.<br> 
+    <article><p class="centered">BEFORE YOU START: check out the <a href="#ranch" on="tap:accordion.expand(section='ranch'),ranch.scrollTo(duration=700)">Ranch</a> and <a href="#lodging" on="tap:accordion.expand(section='lodging'),lodging.scrollTo(duration=700)">Lodging</a> info.<br> 
 Do not click away from this form or you will lose your progress.</p>	
         <amp-iframe width="800" height="1000" sandbox="allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-forms allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" style="border:0" src="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?embedded=true">
         </amp-iframe>
@@ -313,7 +313,7 @@ Do not click away from this form or you will lose your progress.</p>
 		
 	<p class="centered"><a href="https://goo.gl/maps/7uuvrK9YYHCSCu8e7" target="_blank">3190 Red Bridge Rd, Cle Elum WA 98922</a><br><br>
         <a href="https://forecast.weather.gov/MapClick.php?lat=47.194&lon=-120.9331&unit=0&lg=english&FcstType=graphical" target="_blank">Local Weather</a><br><br>
-        See the Lodging section for more info about where to stay.</p>
+        See the <a href="#lodging" on="tap:accordion.expand(section='lodging'),lodging.scrollTo(duration=700)">Lodging</a> section for more info about where to stay.</p>
     </article>
 </section>
 
@@ -324,7 +324,7 @@ Do not click away from this form or you will lose your progress.</p>
             Our intention is to have a fun weekend of connection and easy gathering. The accommodations range from bunk houses to canvas tents with beds & linens, all while maintaining a rustic environment with shared bathrooms and nature all around.<br><br>ON-RANCH OFFERINGS:</p>
         <amp-iframe width="400" height="311.5" scrolling="no" sandbox="allow-scripts allow-same-origin allow-popups-to-escape-sandbox" layout="responsive" frameborder="0" src="https://docs.google.com/spreadsheets/d/17c6lBYkNtdiD44w66Kn_5JvMgTXZALwh1MnBOybNuBw/htmlembed/sheet?gid=1014832229">
         </amp-iframe>
-		<p></p>
+		<p><a href="#rsvp" on="tap:accordion.expand(section='rsvp'),rsvp.scrollTo(duration=700)">RSVP</a> to book your stay on the ranch!</p>
     </article>
 </section>
 
