--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@ button:focus {
     border-bottom: 1px dashed #aaa;
   }
   ::selection {
-   border-bottom: 1px dashed #aaa;
+   background:#f2f2f2;
   }
   ::-moz-selection {
-    border-bottom: 1px dashed #aaa;
+    background:#f2f2f2;
   }
   .spacer{
     height:54.5vh;
