--- a/index.html
+++ b/index.html
@@ -376,6 +376,9 @@ Do not click away from this form or you will lose your progress.</p>
     <article>
         <p><em>Where are Mark and Annie staying?</em><br>
             Flying Horseshoe Ranch!<br><br>
+            <em>What should I pack?</em><br>
+            Sunblock, water bottle, bathing suit, and your dancing shoes.<br>
+            If you stay on the ranch, you may need to bring your own pillow and bedding (depending on the booking). See <a href="#lodging" on="tap:accordion.expand(section='lodging'),lodging.scrollTo(duration=700)">Lodging</a> for more info.<br><br>
             <em>Can I bring my kids?</em><br>
             Yes! Plan accordingly if they will be sleeping at the ranch (travel crib or their own bunk bed, etc.). They would be welcome at every activity and would have a great time!<br><br>
             <em>Can I bring my dog?</em><br>
