--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ amp-iframe{
 
 <section id="rsvp" on="expand:rsvp.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>RSVP</h1></header>
-    <article><p class="centered">BEFORE YOU START: check out the <a href="#ranch" on="tap:accordion.expand(section='ranch'),ranch.scrollTo(duration=700)">Ranch</a> and <a href="#lodging" on="tap:accordion.expand(section='lodging'),lodging.scrollTo(duration=700)">Lodging</a> info.<br> 
+    <article><p class="centered">BEFORE YOU START: check out the <a on="tap:accordion.expand(section='ranch'),ranch.scrollTo(duration=700)">Ranch</a> and <a on="tap:accordion.expand(section='lodging'),lodging.scrollTo(duration=700)">Lodging</a> info.<br> 
 Do not click away from this form or you will lose your progress.</p>	
         <amp-iframe width="800" height="1000" sandbox="allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-forms allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" style="border:0" src="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?embedded=true">
         </amp-iframe>
@@ -313,7 +313,7 @@ Do not click away from this form or you will lose your progress.</p>
 		
 	<p class="centered"><a href="https://goo.gl/maps/7uuvrK9YYHCSCu8e7" target="_blank">3190 Red Bridge Rd, Cle Elum WA 98922</a><br><br>
         <a href="https://forecast.weather.gov/MapClick.php?lat=47.194&lon=-120.9331&unit=0&lg=english&FcstType=graphical" target="_blank">Local Weather</a><br><br>
-        See the <a href="#lodging" on="tap:accordion.expand(section='lodging'),lodging.scrollTo(duration=700)">Lodging</a> section for more info about where to stay.</p>
+        See the <a on="tap:accordion.expand(section='lodging'),lodging.scrollTo(duration=700)">Lodging</a> section for more info about where to stay.</p>
     </article>
 </section>
 
@@ -324,7 +324,7 @@ Do not click away from this form or you will lose your progress.</p>
             Our intention is to have a fun weekend of connection and easy gathering. The accommodations range from bunk houses to canvas tents with beds & linens, all while maintaining a rustic environment with shared bathrooms and nature all around.<br><br>ON-RANCH OFFERINGS:</p>
         <amp-iframe width="400" height="311.5" scrolling="no" sandbox="allow-scripts allow-same-origin allow-popups-to-escape-sandbox" layout="responsive" frameborder="0" src="https://docs.google.com/spreadsheets/d/17c6lBYkNtdiD44w66Kn_5JvMgTXZALwh1MnBOybNuBw/htmlembed/sheet?gid=1014832229">
         </amp-iframe>
-		<p><a href="#rsvp" on="tap:accordion.expand(section='rsvp'),rsvp.scrollTo(duration=700)">RSVP</a> to book your stay on the ranch!</p>
+		<p><a on="tap:accordion.expand(section='rsvp'),rsvp.scrollTo(duration=700)">RSVP</a> to book your stay on the ranch!</p>
     </article>
 </section>
 
@@ -378,13 +378,13 @@ Do not click away from this form or you will lose your progress.</p>
             Flying Horseshoe Ranch!<br><br>
             <em>What should I pack?</em><br>
             Sunblock, water bottle, bathing suit, and your dancing shoes.<br>
-            If you stay on the ranch, you may need to bring your own pillow and bedding (depending on the booking). See <a href="#lodging" on="tap:accordion.expand(section='lodging'),lodging.scrollTo(duration=700)">Lodging</a> for more info.<br><br>
+            If you stay on the ranch, you may need to bring your own pillow and bedding (depending on the booking). See <a on="tap:accordion.expand(section='lodging'),lodging.scrollTo(duration=700)">Lodging</a> for more info.<br><br>
             <em>Can I bring my kids?</em><br>
             Yes! Plan accordingly if they will be sleeping at the ranch (travel crib or their own bunk bed, etc.). They would be welcome at every activity and would have a great time!<br><br>
             <em>Can I bring my dog?</em><br>
             Sorry, but the ranch host has requested no dogs. Check out <a href="https://goo.gl/maps/J8r6MVTXRfjnWFu39" target="_blank">Waggin Tails Ranch</a> or <a href="https://goo.gl/maps/NERGmT8yaWMgUn9v6" target="_blank">Bord & Pillar Pet Resort</a> for boarding.<br><br>
             <em>When should I arrive?</em><br>
-            We are partying all weekend, from Friday afternoon to Sunday. The ceremony is at 5pm on Saturday. Check out the <a href="#schedule" on="tap:accordion.expand(section='schedule'),schedule.scrollTo(duration=700)">Schedule</a> for more info.<br><br>
+            We are partying all weekend, from Friday afternoon to Sunday. The ceremony is at 5pm on Saturday. Check out the <a on="tap:accordion.expand(section='schedule'),schedule.scrollTo(duration=700)">Schedule</a> for more info.<br><br>
             <em>Do you have a registry?</em><br>
             Yes, sort of. The greatest gift you can give us is your presence and your help. We’d love to keep the camp vibe going with lots of participation, and would appreciate any help you can offer! Check out the <a on="tap:accordion.expand(section='registry'),registry.scrollTo(duration=700)">Registry</a> section for more info.<br><br>
         </p>
