--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@ Do not click away from this form or you will lose your progress.</p>
         9am............................................................Brunch<br>
         10am..........................................................Tidy-up<br>
         12pm..........................................Depart Ranch<br>
-        12pm..................Roslyn Farmer's Market<br>
-        2pm..........................Meet at M+A's House<br>
+        12pm..................<a href="http://roslynfarmersmarket.org/" target="_blank">Roslyn Farmer's Market</a><br>
+        2pm..........................Meet at <a href="https://goo.gl/maps/j9vLN5aDKGGfuPyX6" target="_blank">M+A's House</a><br>
         3pm....................................................Hike / Fish<br>
         </p>
     </article>
