--- a/index.html
+++ b/index.html
@@ -320,8 +320,8 @@ Do not click away from this form or you will lose your progress.</p>
 <section id="lodging" on="expand:lodging.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>Lodging</h1></header>
     <article>
-		<p>The Ranch sleeps about 100 people, and we would love to have every bed filled!<br>
-            Our intention is to have a fun weekend of connection and easy gathering. The accommodations range from bunk houses to canvas tents with beds & linens, all while maintaining a rustic environment with shared bathrooms and nature all around.<br><br>ON-RANCH OFFERINGS:</p>
+		<p>Flying Horseshoe Ranch sleeps about 100 people, and we would love to have every bed filled!<br>
+           Accommodations range from bunk houses to canvas tents with beds & linens, all while maintaining a rustic environment with shared bathrooms and nature all around.<br><br>ON-RANCH OFFERINGS:</p>
         <amp-iframe width="400" height="311.5" scrolling="no" sandbox="allow-scripts allow-same-origin allow-popups-to-escape-sandbox" layout="responsive" frameborder="0" src="https://docs.google.com/spreadsheets/d/17c6lBYkNtdiD44w66Kn_5JvMgTXZALwh1MnBOybNuBw/htmlembed/sheet?gid=1014832229">
         </amp-iframe>
 		<p><a on="tap:accordion.expand(section='rsvp'),rsvp.scrollTo(duration=700)">RSVP</a> to book your stay on the ranch!</p>
@@ -356,8 +356,8 @@ Do not click away from this form or you will lose your progress.</p>
         9am............................................................Brunch<br>
         10am..........................................................Tidy-up<br>
         12pm..........................................Depart Ranch<br>
-        12pm..................<a href="http://roslynfarmersmarket.org/" target="_blank">Roslyn Farmer's Market</a><br>
-        2pm..........................Meet at <a href="https://goo.gl/maps/j9vLN5aDKGGfuPyX6" target="_blank">M+A's House</a><br>
+        12pm.................<a href="http://roslynfarmersmarket.org/" target="_blank">Roslyn Farmer's Market</a><br>
+        2pm.........................Meet at <a href="https://goo.gl/maps/j9vLN5aDKGGfuPyX6" target="_blank">M+A's House</a><br>
         3pm....................................................Hike / Fish<br>
         </p>
     </article>
@@ -388,7 +388,8 @@ Do not click away from this form or you will lose your progress.</p>
             Yes! Plan accordingly if they will be sleeping at the ranch (travel crib or their own bunk bed, etc.). They would be welcome at every activity and would have a great time!<br><br>
             
             <em>Can I bring my dog?</em><br>
-            Sorry, but the ranch host has requested no dogs. Check out <a href="https://goo.gl/maps/J8r6MVTXRfjnWFu39" target="_blank">Waggin Tails Ranch</a> or <a href="https://goo.gl/maps/NERGmT8yaWMgUn9v6" target="_blank">Bord & Pillar Pet Resort</a> for boarding.<br><br>
+            Sorry, but the ranch host has requested no dogs.<br>
+            Check out <a href="https://goo.gl/maps/J8r6MVTXRfjnWFu39" target="_blank">Waggin Tails Ranch</a> or <a href="https://goo.gl/maps/NERGmT8yaWMgUn9v6" target="_blank">Bord & Pillar Pet Resort</a> for boarding.<br><br>
             
             <em>What is the dress code?</em><br>
             No camp uniforms required. Annie says "summer casual festive" whatever that means.<br><br>
