--- a/index.html
+++ b/index.html
@@ -299,8 +299,7 @@ Do not click away from this form or you will lose your progress.</p>
     <header class="sectionTitle"><h1>The Ranch</h1></header>
     <article>
 	<p>We recently found the town of Roslyn, WA as the site for our first home.<br><br>
-	And 10 miles to the East is <a href="https://www.flyinghorseshoeranch.com/" target="_blank">Flying Horseshoe Ranch</a>. Annie attended summer horse camp here as a kid. It was one of her first adventures as a young lady into the open Ponderosa forest, rolling hills, and Kittitas Valley fields.<br><br>
-		The ranch has been family owned since the 1950s, shifting from a kids camp to a guest ranch about 15 years ago. Their property enjoys the Teanaway Valley and extends up the hill across the road—ample space to roam.</p>
+	And 10 miles to the East is <a href="https://www.flyinghorseshoeranch.com/" target="_blank">Flying Horseshoe Ranch</a>. Annie attended summer horse camp here as a kid, and experienced her first taste of the open Ponderosa forest, rolling hills, and Kittitas Valley fields. The ranch has been family owned since the 1950s, shifting from a kids camp to a guest ranch about 15 years ago. Their property enjoys the Teanaway Valley and extends up the hill across the road—ample space to roam.</p>
 
    <a href="https://markandannie.camp/img/map2.jpg" target="_blank"><figure class="small">
 	<amp-img alt="Ranch Map"
