--- a/index.html
+++ b/index.html
@@ -394,6 +394,9 @@ Do not click away from this form or you will lose your progress.</p>
             <em>What is the dress code?</em><br>
             No camp uniforms required. Annie says "summer casual festive" whatever that means.<br><br>
             
+            <em>Any dangerous animals?</em><br>
+            <a href="https://wdfw.wa.gov/species-habitats/species/puma-concolor" target="_blank">Mountain Lion</a>, <a href="http://www.californiaherps.com/noncal/northwest/nwsnakes/pages/c.o.oreganus.html" target="_blank">Northern Pacific Rattlesnake</a>, <a href="http://entomology.wsu.edu/outreach/bug-info/yellow-sac-spider/" target="_blank">Yellow Sac Spider</a>, <a href="https://www.nationalgeographic.com/animals/invertebrates/group/black-widow-spiders/" target="_blank">Black Widow Spider</a>, <a href="https://wdfw.wa.gov/species-habitats/species/ursus-americanus" target="_blank">Black Bear</a>.<br>Avoid <a href="https://www.dermrochester.com/blog/how-to-tell-the-difference-between-poison-ivy-poison-oak-and-poison-sumac/" target="_blank">Poison Ivy and Poison Sumac</a>.<br><br>
+            
             <em>Do you have a registry?</em><br>
             Yes, sort of. The greatest gift you can give us is your presence and your help. We’d love to keep the camp vibe going with lots of participation, and would appreciate any help you can offer! Check out the <a on="tap:accordion.expand(section='registry'),registry.scrollTo(duration=700)">Registry</a> section for more info.
         </p>
