--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@ section[expanded] > .sectionTitle > h1{
   figure amp-img{
     border-radius:3px;
   }
+    .lodging{
+        margin-bottom:0;
+    }
   amp-sidebar{
     width: 37vh;
     background:#fff;
@@ -323,7 +326,7 @@ Do not click away from this form or you will lose your progress.</p>
     <article>
 		<p>Flying Horseshoe Ranch sleeps about 100 people, and we would love to have every bed filled!<br>
            Accommodations range from bunk houses to canvas tents with beds & linens, all while maintaining a rustic environment with shared bathrooms and nature all around.<br><br>ON-RANCH OFFERINGS:</p>
-            <figure class="small">
+            <figure class="lodging">
             <amp-img alt="Bunk Cabin"
               src="img/bunk.jpg"
               width="1200"
@@ -337,7 +340,7 @@ Do not click away from this form or you will lose your progress.</p>
             12'x14' cabin with bunk beds for 8 people.<br>
             Bring your sleeping bag and pillow (or ask us about rentals).<br>
             Use the shared bath houses nearby.</p>
-            <figure class="small">
+            <figure class="lodging">
             <amp-img alt="Wrangler Cabin"
               src="img/wrangler.jpg"
               width="1200"
