--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ section[expanded] > .sectionTitle > h1{
     border-radius:3px;
   }
     .lodging{
-        margin-bottom:0;
+        margin-bottom:14px;
     }
   amp-sidebar{
     width: 37vh;
