--- a/index.html
+++ b/index.html
@@ -353,16 +353,43 @@ Do not click away from this form or you will lose your progress.</p>
             Located in the main camping area.<br>
             12'x14' cabin.<br>
             One queen bed and two twin beds, bunked (pillows & bedding included).<br>
-            Use the shared bath houses nearby.<br><br>
+            Use the shared bath houses nearby.</p>
+        <figure class="lodging">
+            <amp-img alt="Log Cabin"
+              src="img/logcabin.jpg"
+              width="1200"
+              height="450"
+              layout="responsive">
+            </amp-img>
+          </figure>
+        <p>
             Log Cabin (1):<br>
             Located on the hill (0.7 miles from main camp), accessible by car or foot.<br>
             22'x24' cabin with kitchen, full bathroom, and outdoor hot tub.<br>
-            Open loft with one queen bed and four twin beds (pillows & bedding included).<br><br>
+            Open loft with one queen bed and four twin beds (pillows & bedding included).</p>
+        <figure class="lodging">
+            <amp-img alt="Canvas Tent"
+              src="img/tent.jpg"
+              width="1200"
+              height="450"
+              layout="responsive">
+            </amp-img>
+          </figure>
+        <p>
             Canvas Tent (2):<br>
             Located on the hill (0.7 miles from main camp), accessible by car or foot.<br>
             16'x14' canvas tent on a redwood deck.<br>
             One queen bed (pillows & bedding included).<br>
-            Outhouse on hill, and shower at the shared bath houses at main camp<br><br> 
+            Outhouse on hill, and shower at the shared bath houses at main camp</p>
+        <figure class="lodging">
+            <amp-img alt="Tipi"
+              src="img/tipi.jpg"
+              width="1200"
+              height="450"
+              layout="responsive">
+            </amp-img>
+          </figure>
+        <p>
             Tipi (4):<br>
             Located on the hill (0.7 miles from main camp), accessible by car or foot.<br>
             16' diameter Sioux-style tipis, lit by lantern.<br>
