--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ Do not click away from this form or you will lose your progress.</p>
             </amp-img>
           </figure>
         <p>
-            Shared Bunk Cabins (9):<br>
+            <b>Shared Bunk Cabins</b> (9):<br>
             Located in main camping area.<br>
             12'x14' cabin with bunk beds for 8 people.<br>
             Bring your sleeping bag and pillow (or ask us about rentals).<br>
@@ -349,7 +349,7 @@ Do not click away from this form or you will lose your progress.</p>
             </amp-img>
           </figure>
         <p>
-            Wrangler Cabins (2):<br>
+            <b>Wrangler Cabins</b> (2):<br>
             Located in the main camping area.<br>
             12'x14' cabin.<br>
             One queen bed and two twin beds, bunked (pillows & bedding included).<br>
@@ -363,7 +363,7 @@ Do not click away from this form or you will lose your progress.</p>
             </amp-img>
           </figure>
         <p>
-            Log Cabin (1):<br>
+            <b>Log Cabin</b> (1):<br>
             Located on the hill (0.7 miles from main camp), accessible by car or foot.<br>
             22'x24' cabin with kitchen, full bathroom, and outdoor hot tub.<br>
             Open loft with one queen bed and four twin beds (pillows & bedding included).</p>
@@ -376,7 +376,7 @@ Do not click away from this form or you will lose your progress.</p>
             </amp-img>
           </figure>
         <p>
-            Canvas Tent (2):<br>
+            <b>Canvas Tent</b> (2):<br>
             Located on the hill (0.7 miles from main camp), accessible by car or foot.<br>
             16'x14' canvas tent on a redwood deck.<br>
             One queen bed (pillows & bedding included).<br>
@@ -390,7 +390,7 @@ Do not click away from this form or you will lose your progress.</p>
             </amp-img>
           </figure>
         <p>
-            Tipi (4):<br>
+            <b>Tipi</b> (4):<br>
             Located on the hill (0.7 miles from main camp), accessible by car or foot.<br>
             16' diameter Sioux-style tipis, lit by lantern.<br>
             Four twin beds.<br>
