--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ Do not click away from this form or you will lose your progress.</p>
             16' diameter Sioux-style tipis, lit by lantern.<br>
             Four twin beds.<br>
             Bring your sleeping bag and pillow (or ask us about rentals).<br>
-            Outhouse on hill, and shower at the shared bath houses at main camp.<br><br>
+            Outhouse on hill, and shower at the shared bath houses at main camp.<br><br><br><br>
             CURRENT BOOKINGS:
         </p>
         
