--- a/index.html
+++ b/index.html
@@ -405,7 +405,12 @@ Do not click away from this form or you will lose your progress.</p>
             If your booking does not include linens, let us know and we can help you procure them.<br>
             The tents & tipis on the bluff are outhouse-only. Shower in the shared bath houses at camp below.<br><br><br><br>
         OFF-SITE OPTIONS:<br><br>
-            If you must stay off-site, check out our suggestions below. Roslyn is a lovely town to explore, and it hosts a Sunday Farmer’s market—not to be missed. Ronald is just west nearer to Lake Cle Elum, and hosts many seasonal rentals. Suncadia also has many rental options, including multi-bedroom houses for larger groups.
+            If you must stay off-site, check out our suggestions below. Roslyn is a lovely town to explore, and it hosts a Sunday Farmer’s market—not to be missed. Ronald is just west nearer to Lake Cle Elum, and hosts many seasonal rentals. Suncadia also has many rental options, including multi-bedroom houses for larger groups.<br><br>
+            Worth a look:<br> 
+            <a href="https://goo.gl/maps/hxVo7CHoqjj6w9RH8" target="_blank">Hotel Roslyn</a>: we have reserved four rooms for family. Get in touch if interested.
+            <a href="https://goo.gl/maps/DSnXhBNVE59wk3uPA" target="_blank">Spruce Moose Inn</a>: downtown Roslyn.
+            <a href="https://goo.gl/maps/gXPy9jBLSgFdEEDV7" target="_blank">Huckleberry House</a>: historic Roslyn inn.
+            <a href="https://goo.gl/maps/3SUuDWnjgEfCxTRx6" target="_blank">Iron Horse Inn</a>: sleep in a train caboose.
 </p>
     </article>
 </section>
