--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ You will lose your progress if you click away from this form.</p>
             <em>Can I bring my own tent? What about my RV?</em><br>
             Yes, and yes! Just set up on the flat area south of the parking lot (see <a on="tap:accordion.expand(section='ranch'),ranch.scrollTo(duration=700)">ranch map</a>).<br><br>
             
-            <em>Any dangerous flora or fauna?</em><br>
+            <em>Any potentially dangerous flora or fauna?</em><br>
             <a href="https://wdfw.wa.gov/species-habitats/species/puma-concolor" target="_blank">Mountain Lion</a>, <a href="http://www.californiaherps.com/noncal/northwest/nwsnakes/pages/c.o.oreganus.html" target="_blank">Northern Pacific Rattlesnake</a>, <a href="http://entomology.wsu.edu/outreach/bug-info/yellow-sac-spider/" target="_blank">Yellow Sac Spider</a>, <a href="http://entomology.wsu.edu/outreach/bug-info/black-widow/" target="_blank">Black Widow Spider</a>, <a href="https://wdfw.wa.gov/species-habitats/species/ursus-americanus" target="_blank">Black Bear</a>.<br>Don't leave any food in the cabins.<br>Also avoid <a href="https://www.dermrochester.com/blog/how-to-tell-the-difference-between-poison-ivy-poison-oak-and-poison-sumac/" target="_blank">Poison Ivy and Poison Sumac</a>.<br><br>
             
             <em>Do you have a registry?</em><br>
